Fix navigation bar. Prevent Products link from collapsing to a new line.

--- a/app/assets/stylesheets/style-pink.css
+++ b/app/assets/stylesheets/style-pink.css
@@ -214,6 +214,7 @@ img {max-width:100%;
 .navmenu {
 	margin:0;
 	padding:0;
+	white-space:nowrap;
 }
 .fixed-menu .navmenu {
 	float:right;
@@ -227,7 +228,7 @@ img {max-width:100%;
 	vertical-align:top;
 	list-style: none;
 	padding:0;
-    margin: 0 20px 10px;
+  margin: 0 20px 10px;
 }
 .navmenu ul li a {
 	display: inline-block;
